sumo/tests/duarouter/routes/style2_input/errors/vehicle_false_arrivalpos/errors.duarouter
Error: Invalid arrivalPos definition for vehicle '0'
Quitting (on error).
